<?xml version="1.0"?>
<package format="2">
  <name>flower_core</name>
  <version>0.0.0</version>
  <description>The flower_core package</description>

  <maintainer email="user@example.com">user</maintainer>

  <license>TODO</license>

  <!-- Add catkin as buildtool_depend -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roslib</exec_depend>

</package>
